force-app/main/default/objects/Compliance_Template__mdt/Compliance_Template__mdt.object-meta.xml
<CustomObject>
    <label>Compliance Template</label>
    <pluralLabel>Compliance Templates</pluralLabel>
    <description>Defines compliance framework requirements and automated check configurations for governance evaluation.</description>
</CustomObject>