force-app/main/default/objects/Compliance_Template__mdt/fields/Auto_Evaluatable__c.field-meta.xml
<CustomField>
    <fullName>Auto_Evaluatable__c</fullName>
    <label>Auto Evaluatable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this compliance requirement can be automatically evaluated.</description>
</CustomField>