force-app/main/default/objects/Compliance_Template__mdt/fields/Check_Type__c.field-meta.xml
<CustomField>
    <fullName>Check_Type__c</fullName>
    <label>Check Type</label>
    <type>Text</type>
    <length>100</length>
    <description>Type of compliance check to perform (e.g., FieldAudit, ProfileAccess, SharingRule).</description>
</CustomField>