force-app/main/default/objects/Compliance_Template__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Detailed description of the compliance requirement.</description>
</CustomField>