force-app/main/default/objects/Compliance_Template__mdt/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <type>Text</type>
    <length>100</length>
    <description>Compliance framework name (e.g., SOX, HIPAA, PCI-DSS).</description>
</CustomField>