force-app/main/default/objects/Compliance_Template__mdt/fields/Requirement_Id__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Id__c</fullName>
    <label>Requirement Id</label>
    <type>Text</type>
    <length>100</length>
    <description>Unique identifier for the compliance requirement within the framework.</description>
</CustomField>